_includes/styles.scss
@import '../_sass/external';

body {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Noto Color Emoji;
}

hr {
  border: 1px solid gray;
  border-radius: 1px;
}

// If a user adds a custom font, this component will stop it from bleeding into GitHub components:
.github-component {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Noto Color Emoji !important;
}

.repo-language-color {
    filter: brightness(125%) !important;
    border-radius: 50%;
    display: inline-block;
    height: 12px;
    position: relative;
    top: 2px;
    width: 12px;
}

.emoji {
  width: 18px;
  height: auto;
  vertical-align: middle;
}

.min-height-full {
  min-height: 100vh;
}

.icon-color {
  fill: #24292e !important;
}

@media (prefers-color-scheme: dark) {
  a {
    color: #599eff !important;
  }

  .bg-white {
    background-color: #4f565d !important;
  }

  .bg-gray-light {
    background-color: #2f363d !important;
  }

  .border-gray-light {
    border-color: transparent !important;
  }

  .text-gray, .link-gray, .link-gray:hover {
    color: #d0d8e1 !important;
  }

  .link-gray-dark {
    color: #fff !important;
  }

  .link-gray-dark:hover {
    color: #599eff !important;
  }

  .border, .border-md-bottom {
    border: none !important;
  }

  .masthead {
    background-color: #24292e !important;
  }

  .text-defaults {
    color: #fff !important;
    * { color: #fff !important; }
  }

  .scoped-text-defaults {
    color: #fff !important;
  }

  .icon-color {
    fill: #fff !important;
  }
}

